<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="LoginActivityBinding">

        <variable
            name="viewModel"
            type="io.github.trubitsyn.diary.ui.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/login_required"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={viewModel.credentials.login}" />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:text="@={viewModel.credentials.password}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="@{viewModel.loginEnabled}"
                android:onClick="@{viewModel.onLoginActionClick}"
                android:text="@string/action_login" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:enabled="@{viewModel.loginEnabled}"
                android:onClick="@{viewModel.onLoginNoPasswordActionClick}"
                android:text="@string/action_login_nopassword" />
        </LinearLayout>

    </LinearLayout>
</layout>